add skeleton to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Nathaniel Morales</title>
 </head>
 <body>
-    
+    <!-- navbar-->
+
+    <!-- hero image with about me -->
+
+    <!-- skills -->
+
+    <!-- projects -->
+
+    <!-- past experience -->
+
+    <!-- contact me -->
+
+    <!-- footer with social media -->
 </body>
 </html>
