add github icon to right of navbar, applied css

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
                     <a class="nav-link" href="#">Projects</a>
                 </li>
             </ul>
-            <div class="navbar-social">
-                <a class="nav-link" href="https://github.com/moralesn1/">
-                    <img src="docs/github_icon.svg"/>
-                </a>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="nav-link" href="https://github.com/moralesn1/">
+                            <img src="docs/github_icon.svg"/>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     
