--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                             <img src="docs/github_icon.svg"/>
                         </a>
                     </li>
+                    <li>
+                        <a class="nav-link" href="https://twitter.com/arraystartat0ne/">
+                            <img src="docs/twitter-black-background-transimgback.png"/>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
