change background nav to black; make appropriate changes

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <!-- navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -31,12 +31,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="nav-link" href="https://github.com/moralesn1/">
-                            <img src="docs/github_icon.svg"/>
+                            <img src="docs/githubicon.png"/>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" href="https://twitter.com/arraystartat0ne/">
-                            <img src="docs/twitter-black-background-transimgback.png"/>
+                            <img src="docs/twitterblack.png"/>
                         </a>
                     </li>
                 </ul>
