add footer, color black with white text; bootstrap test

--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
 
     <!-- footer with social media -->
 
+    <!-- Footer -->
+
+    <footer class="page-footer">
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+            <p>
+                Nathaniel Morales © 2019
+            </p>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
+
 
 
 
