--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
       </nav>
 
     <!-- hero image with about me -->
+    <div class="profile-image">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-12 col-lg-offset-4">
+                    <img src="docs/profilepic2.png"/>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- skills -->
 
