external links open in new tabs

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="nav-link" href="https://github.com/moralesn1/">
+                        <a class="nav-link" target="_blank" href="https://github.com/moralesn1/">
                             <img src="docs/githubicon.png"/>
                         </a>
                     </li>
                     <li>
-                        <a class="nav-link" href="https://twitter.com/arraystartat0ne/">
+                        <a class="nav-link" target="_blank" href="https://twitter.com/arraystartat0ne/">
                             <img src="docs/twitterblack.png"/>
                         </a>
                     </li>
