--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="normalise.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+    
     <title>Nathaniel Morales</title>
 </head>
 <body>
@@ -63,6 +65,37 @@
     <!-- skills -->
 
     <!-- projects -->
+
+    <div class="projects">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <h4>Ruby Terminal Project</h4>
+                    <img src="docs/rubyTerminalProject.svg"/>
+                    <p>
+                        This terminal application was build using Ruby to be run inside the terminal. 
+                        It's a choice based game with further applications for education or job training.
+                    </p>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <h4>CSS Zen Garden</h4>
+                    <img src="docs/css-zengarden.svg"/>
+                    <p>
+                        This project was aimed at developing my css skills as well as demonstrating
+                        my minimalist approach when it comes to designs.
+                    </p>
+                    
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <h4>Ruby Terminal Project</h4>
+                    <img src="docs/rubyTerminalProject.svg"/>
+                </div>
+                <div class="row">
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- past experience -->
 
