add webprofile pic to skills section, edit typo in skills section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h4>Ruby Terminal Project</h4>
                     <img src="docs/rubyTerminalProject.svg"/>
                     <p>
-                        This terminal application was build using Ruby to be run inside the terminal. 
+                        This terminal application was built using Ruby to be run inside the terminal. 
                         It's a choice based game with further applications for education or job training.
                     </p>
                 </div>
@@ -87,8 +87,8 @@
                     
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <h4>Ruby Terminal Project</h4>
-                    <img src="docs/rubyTerminalProject.svg"/>
+                    <h4>Web Portfolio</h4>
+                    <img src="docs/webprofile-pic.svg"/>
                 </div>
                 <div class="row">
 
