change col-md-4 to 6 in projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- hero image with about me -->
     <div class="hero jumbotron">
-        <div class="hero container">
+        <div class="hero-container">
             <img src="docs/profilepic2.png"/>
             <p>Hi there! I'm Nathaniel.</p>
             <p>I'm a Full Stack Developer based in Sydney, Australia.</p>
@@ -73,7 +73,7 @@
     <div class="projects">
         <div class="container text-center">
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
                     <img src="docs/rubyTerminalProject.svg"/>
                     <p>
@@ -81,16 +81,15 @@
                         It's a choice based game with further applications for education or job training.
                     </p>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>CSS Zen Garden</h4>
                     <img src="docs/css-zengarden.svg"/>
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
                         my minimalist approach when it comes to designs.
-                    </p>
-                    
+                    </p>  
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Web Portfolio</h4>
                     <img src="docs/webprofile-pic.svg"/>
                 </div>
