add row and column to projects

--- a/index.html
+++ b/index.html
@@ -61,13 +61,17 @@
     <!-- skills -->
 
     <!-- projects -->
+    <div class="section-divider">
+        <hr class="hr-divider"/>
+    </div>
 
     <div class="projects">
         <div class="container text-center">
-            <div class="row">
+            <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
                     <img src="docs/rubyTerminalProject.svg"/>
+                    <p> Ruby </p>
                     <p>
                         This terminal application was built using Ruby to be run inside the terminal. 
                         It's a choice based game with further applications for education or job training.
@@ -76,6 +80,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>CSS Zen Garden</h4>
                     <img src="docs/css-zengarden.svg"/>
+                    <p> HTML and CSS </p>
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
                         my minimalist approach when it comes to designs.
@@ -84,13 +89,22 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Web Portfolio</h4>
                     <img src="docs/webprofile-pic.svg"/>
+                    <p> HTML, CSS and JavaScript </p>
                 </div>
-                <div class="row">
-
+            </div>
+            <div class="row top-buffer">
+                <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <h4>Mystery Box Markets</h4>
+                    <img src="docs/mysteryboxmarket.svg"/>
+                    <p> Ruby, Rails, HTML and CSS</p>
+                    <p>
+                        A two sided market place where users buy and sell "Mystery Boxes".
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+   
 
     <!-- past experience -->
 
