style hr and stop divs from overlapping

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <div class="projects">
         <div class="container text-center">
+            <h3> Projects </h3>
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
