import google font and applied new font to body and projects p techstack

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="normalise.css"/>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
     
+    
     <title>Nathaniel Morales</title>
 </head>
 <body>
@@ -72,7 +73,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
                     <img src="docs/rubyTerminalProject.svg"/>
-                    <p> Ruby </p>
+                    <p class="techstack"> Ruby </p>
                     <p>
                         This terminal application was built using Ruby to be run inside the terminal. 
                         It's a choice based game with further applications for education or job training.
@@ -81,7 +82,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>CSS Zen Garden</h4>
                     <img src="docs/css-zengarden.svg"/>
-                    <p> HTML and CSS </p>
+                    <p class="techstack"> HTML and CSS </p>
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
                         my minimalist approach when it comes to designs.
@@ -90,14 +91,14 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Web Portfolio</h4>
                     <img src="docs/webprofile-pic.svg"/>
-                    <p> HTML, CSS and JavaScript </p>
+                    <p class="techstack"> HTML, CSS and JavaScript </p>
                 </div>
             </div>
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Mystery Box Markets</h4>
                     <img src="docs/mysteryboxmarket.svg"/>
-                    <p> Ruby, Rails, HTML and CSS</p>
+                    <p class="techstack"> Ruby, Rails, HTML and CSS</p>
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
                     </p>
