add language image logos, create skeleton for skills div section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,24 @@
         </div>
     </div>
 
+    <div class="section-divider">
+        <hr class="hr-divider"/>
+    </div>
+
     <!-- skills -->
+    <div class="skills">
+        <div class="container text-center">
+            <h3> Skills </h3>
+            <div class="row top-buffer">
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <h3> Languages </h3>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <h3> Tech Stack </h3>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- projects -->
     <div class="section-divider">
