--- a/index.html
+++ b/index.html
@@ -63,20 +63,42 @@
         <hr class="hr-divider"/>
     </div>
 
-    <!-- skills -->
     <div class="skills">
         <div class="container text-center">
             <h3> Skills </h3>
-            <div class="row top-buffer">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h3> Languages </h3>
+            <div class="row">
+                <div class="col">
+                    <div class="row">
+                            <div class="col-lg-12 col-sm-6 col-xs-6">
+                                <img src="docs/ruby-logo.png" alt="ruby logo"> 
+                                <p> Ruby </p>
+                            </div>
+                            <div class="col-lg-12 col-sm-6 col-xs-6">
+                                <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
+                                <p> JavaScript </p>
+                            </div>
+                            <div class="col-lg-12 col-sm-6 col-xs-6">
+                                <img src="docs/HTML5_1Color_White.png" alt="HTML5-logo">
+                                <p> HTML5</p>
+                            </div>
+                            <div class="col-lg-12 col-sm-6 col-xs-6">
+                                <img src="docs/CSS-icon.png" alt="CSS-Logo">
+                                <p> CSS </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h3> Tech Stack </h3>
+            <div class="row skills-2">
+                <div class="col-12 skills-2">
+                    <h3> Frameworks and Libraries </h3>
                 </div>
             </div>
+
         </div>
     </div>
+
+    <!-- skills -->
+
 
     <!-- projects -->
     <div class="section-divider">
