change hero image and stop elements from overflowing

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- hero image with about me -->
     <div class="hero jumbotron">
         <div class="hero-container">
-            <img src="docs/profilepic2.png"/>
+            <img src="docs/hero-img.svg"/>
             <p>Hi there! I'm Nathaniel.</p>
             <p>I'm a Full Stack Developer based in Sydney, Australia.</p>
             <p>Developing and designing web applications and seeing them come to life is my passion.</p>
@@ -63,7 +63,7 @@
         <hr class="hr-divider"/>
     </div>
 
-    <div class="skills">
+    <!-- <div class="skills">
         <div class="container text-center">
             <h3> Skills </h3>
             <div class="row">
@@ -95,7 +95,7 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
 
     <!-- skills -->
 
