style skills containers, add color logos for skills container

--- a/index.html
+++ b/index.html
@@ -63,41 +63,66 @@
         <hr class="hr-divider"/>
     </div>
 
-    <!-- <div class="skills">
+
+    <!-- skills -->
+
+    <div class="skills">
         <div class="container text-center">
-            <h3> Skills </h3>
+            <h2> Skills </h2>
             <div class="row">
                 <div class="col">
-                    <div class="row">
-                            <div class="col-lg-12 col-sm-6 col-xs-6">
-                                <img src="docs/ruby-logo.png" alt="ruby logo"> 
-                                <p> Ruby </p>
-                            </div>
-                            <div class="col-lg-12 col-sm-6 col-xs-6">
-                                <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
-                                <p> JavaScript </p>
-                            </div>
-                            <div class="col-lg-12 col-sm-6 col-xs-6">
-                                <img src="docs/HTML5_1Color_White.png" alt="HTML5-logo">
-                                <p> HTML5</p>
-                            </div>
-                            <div class="col-lg-12 col-sm-6 col-xs-6">
-                                <img src="docs/CSS-icon.png" alt="CSS-Logo">
-                                <p> CSS </p>
+                    <div class="skills-container">
+                        <h3> Languages </h3>
+                        <div class="row">
+                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                    <img src="docs/ruby-logo.png" alt="ruby logo"> 
+                                    <p> Ruby </p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                    <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
+                                    <p> JavaScript </p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                    <img src="docs/HTML5_1Color_White.png" alt="HTML5-logo">
+                                    <p> HTML5</p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                    <img src="docs/CSS-icon.png" alt="CSS-Logo">
+                                    <p> CSS </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             <div class="row skills-2">
-                <div class="col-12 skills-2">
-                    <h3> Frameworks and Libraries </h3>
+                <div class="col-12">
+                    <div class="skills-container">
+                        <h3> Frameworks and Libraries </h3>
+                        <div class="row">
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/rails-logo.png" alt="Rails-logo"> 
+                                    <p> Rails </p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/react-1-logo-black-and-white.png" alt="React-logo">
+                                    <p> React.js </p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/node.js.png" alt="Node-logo">
+                                    <p> Node.js </p>
+                                </div>
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/bootstrap-icon.png" alt="Bootstrap-Logo">
+                                    <p> Bootstrap </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
         </div>
-    </div> -->
-
-    <!-- skills -->
+    </div>
 
 
     <!-- projects -->
