add tools and utilities section with color icons

--- a/index.html
+++ b/index.html
@@ -74,55 +74,79 @@
                     <div class="skills-container">
                         <h3> Languages </h3>
                         <div class="row">
-                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
                                     <img src="docs/ruby-logo.png" alt="ruby logo"> 
                                     <p> Ruby </p>
                                 </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-6">
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
                                     <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
                                     <p> JavaScript </p>
                                 </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-6">
-                                    <img src="docs/HTML5_1Color_White.png" alt="HTML5-logo">
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/html-colour-icon.ico" alt="HTML5-logo">
                                     <p> HTML5</p>
                                 </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-6">
-                                    <img src="docs/CSS-icon.png" alt="CSS-Logo">
+                                <div class="col-lg-3 col-sm-6 col-xs-12">
+                                    <img src="docs/css-colour-icon.svg" alt="CSS-Logo">
                                     <p> CSS </p>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
-            <div class="row skills-2">
+            </div>
+            <div class="row">
                 <div class="col-12">
                     <div class="skills-container">
-                        <h3> Frameworks and Libraries </h3>
+                        <h3> Frameworks and  <br> Libraries </h3>
                         <div class="row">
                                 <div class="col-lg-3 col-sm-6 col-xs-12">
                                     <img src="docs/rails-logo.png" alt="Rails-logo"> 
                                     <p> Rails </p>
                                 </div>
                                 <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/react-1-logo-black-and-white.png" alt="React-logo">
+                                    <img src="docs/react-colour-icon.png" alt="React-logo">
                                     <p> React.js </p>
                                 </div>
                                 <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/node.js.png" alt="Node-logo">
+                                    <img src="docs/nodejs-colour-icon.png" alt="Node-logo">
                                     <p> Node.js </p>
                                 </div>
                                 <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/bootstrap-icon.png" alt="Bootstrap-Logo">
+                                    <img src="docs/bootstrap-colour-icon.png" alt="Bootstrap-Logo">
                                     <p> Bootstrap </p>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="row">
+                    <div class="col-12">
+                        <div class="skills-container">
+                            <h3> Tools and Utilities </h3>
+                            <div class="row">
+                                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                                        <img src="docs/git-colour-icon.png" alt="Git-logo"> 
+                                        <p> Git </p>
+                                    </div>
+                                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                                        <img src="docs/githubicon.png" alt="github-logo">
+                                        <p> Github </p>
+                                    </div>
+                                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                                        <img src="docs/postgresql-colour-icon.png" alt="postgresql-logo">
+                                        <p> PostgresQL </p>
+                                    </div>
+                                    <div class="col-lg-3 col-sm-6 col-xs-12">
+                                        <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
+                                        <p> Mongo </p>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
+
 
 
     <!-- projects -->
