redo skills section, two columns per row

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- skills -->
 
-    <div class="skills">
+    <!-- <div class="skills">
         <div class="container text-center">
             <h2> Skills </h2>
             <div class="row">
@@ -144,6 +144,86 @@
                         </div>
                     </div>
                 </div>
+        </div>
+    </div> -->
+
+    <div class="skills">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-6 col-sm-12 col-xs-12">
+                    <h3> Languages </h3>
+                </div>
+                <div class="col-lg-6 col-sm-12 col-xs-12">
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-6 col-xs-6">
+                            <img src="docs/ruby-logo.png" alt="ruby logo"> 
+                            <p> Ruby </p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-xs-6">
+                            <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
+                            <p> JavaScript </p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-xs-6">
+                            <img src="docs/html-colour-icon.ico" alt="HTML5-logo">
+                            <p> HTML5</p>
+                        </div>
+                        <div class="col-lg-6 col-sm-6 col-xs-6">
+                            <img src="docs/css-colour-icon.svg" alt="CSS-Logo">
+                            <p> CSS </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                    <div class="col-lg-6 col-sm-12 col-xs-12">
+                        <h3> Framesworks and <br> Libraries </h3>
+                    </div>
+                    <div class="col-lg-6 col-sm-12 col-xs-12">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
+                                <img src="docs/rails-logo.png" alt="Rails-logo"> 
+                                <p> Rails </p>
+                            </div>
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
+                                <img src="docs/react-colour-icon.png" alt="React-logo">
+                                <p> React.js </p>
+                            </div>
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
+                                <img src="docs/nodejs-colour-icon.png" alt="Node-logo">
+                                <p> Node.js </p>
+                            </div>
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
+                                <img src="docs/bootstrap-colour-icon.png" alt="Bootstrap-Logo">
+                                <p> Bootstrap </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                            <h3> General </h3>
+                        </div>
+                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                            <div class="row">
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/git-colour-icon.png" alt="Git-logo"> 
+                                    <p> Git </p>
+                                </div>
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/githubicon.png" alt="github-logo">
+                                    <p> Github </p>
+                                </div>
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/postgresql-colour-icon.png" alt="postgresql-logo">
+                                    <p> PostgresQL </p>
+                                </div>
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
+                                    <p> Mongo </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
         </div>
     </div>
 
