--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
 
     <div class="skills">
         <div class="container text-center">
-            <div class="row">
-                <div class="col-lg-6 col-sm-12 col-xs-12">
+            <div class="skill-row row">
+                <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                     <h3> Languages </h3>
                 </div>
-                <div class="col-lg-6 col-sm-12 col-xs-12">
+                <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                     <div class="row">
                         <div class="col-lg-6 col-sm-6 col-xs-6">
                             <img src="docs/ruby-logo.png" alt="ruby logo"> 
@@ -174,11 +174,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                    <div class="col-lg-6 col-sm-12 col-xs-12">
+            <div class="skill-row row">
+                    <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                         <h3> Framesworks and <br> Libraries </h3>
                     </div>
-                    <div class="col-lg-6 col-sm-12 col-xs-12">
+                    <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                         <div class="row">
                             <div class="col-lg-6 col-sm-6 col-xs-6">
                                 <img src="docs/rails-logo.png" alt="Rails-logo"> 
@@ -199,11 +199,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                <div class="skill-row row">
+                        <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                             <h3> General </h3>
                         </div>
-                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                        <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                             <div class="row">
                                 <div class="col-lg-6 col-sm-6 col-xs-6">
                                     <img src="docs/git-colour-icon.png" alt="Git-logo"> 
