add more skills to skills section

--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
 
     <div class="skills">
         <div class="container text-center">
+            <h2> Skills </h2>
             <div class="skill-row row">
                 <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
-                    <h3> Languages </h3>
+                    <h4> Languages </h4>
                 </div>
                 <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                     <div class="row">
@@ -176,7 +177,7 @@
             </div>
             <div class="skill-row row">
                     <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
-                        <h3> Framesworks and <br> Libraries </h3>
+                        <h4> Framesworks and <br> Libraries </h4>
                     </div>
                     <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                         <div class="row">
@@ -193,6 +194,10 @@
                                 <p> Node.js </p>
                             </div>
                             <div class="col-lg-6 col-sm-6 col-xs-6">
+                                    <img src="docs/redux-colour-icon.png" alt="Bootstrap-Logo">
+                                    <p> Redux </p>
+                                </div>
+                            <div class="col-lg-6 col-sm-6 col-xs-6">
                                 <img src="docs/bootstrap-colour-icon.png" alt="Bootstrap-Logo">
                                 <p> Bootstrap </p>
                             </div>
@@ -201,7 +206,7 @@
                 </div>
                 <div class="skill-row row">
                         <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
-                            <h3> General </h3>
+                            <h4> General </h4>
                         </div>
                         <div class="skill-container col-lg-6 col-sm-12 col-xs-12">
                             <div class="row">
@@ -221,6 +226,10 @@
                                     <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
                                     <p> Mongo </p>
                                 </div>
+                                <div class="col-lg-6 col-sm-6 col-xs-6">
+                                        <img src="docs/heroku-colour-icon.png" alt="mongo-db-logo">
+                                        <p> Heroku </p>
+                                    </div>
                             </div>
                         </div>
                     </div>
