--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projects</a>
+                    <a class="nav-link" href="#projects">Projects</a>
                 </li>
             </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -59,93 +59,15 @@
         </div>
     </div>
 
+        
+    <div id="skills">
+    </div>
+
     <div class="section-divider">
         <hr class="hr-divider"/>
     </div>
 
-
     <!-- skills -->
-
-    <!-- <div class="skills">
-        <div class="container text-center">
-            <h2> Skills </h2>
-            <div class="row">
-                <div class="col">
-                    <div class="skills-container">
-                        <h3> Languages </h3>
-                        <div class="row">
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/ruby-logo.png" alt="ruby logo"> 
-                                    <p> Ruby </p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/JavaScript-logo.png" alt="JavaScript-logo">
-                                    <p> JavaScript </p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/html-colour-icon.ico" alt="HTML5-logo">
-                                    <p> HTML5</p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/css-colour-icon.svg" alt="CSS-Logo">
-                                    <p> CSS </p>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="skills-container">
-                        <h3> Frameworks and  <br> Libraries </h3>
-                        <div class="row">
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/rails-logo.png" alt="Rails-logo"> 
-                                    <p> Rails </p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/react-colour-icon.png" alt="React-logo">
-                                    <p> React.js </p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/nodejs-colour-icon.png" alt="Node-logo">
-                                    <p> Node.js </p>
-                                </div>
-                                <div class="col-lg-3 col-sm-6 col-xs-12">
-                                    <img src="docs/bootstrap-colour-icon.png" alt="Bootstrap-Logo">
-                                    <p> Bootstrap </p>
-                                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                    <div class="col-12">
-                        <div class="skills-container">
-                            <h3> Tools and Utilities </h3>
-                            <div class="row">
-                                    <div class="col-lg-3 col-sm-6 col-xs-12">
-                                        <img src="docs/git-colour-icon.png" alt="Git-logo"> 
-                                        <p> Git </p>
-                                    </div>
-                                    <div class="col-lg-3 col-sm-6 col-xs-12">
-                                        <img src="docs/githubicon.png" alt="github-logo">
-                                        <p> Github </p>
-                                    </div>
-                                    <div class="col-lg-3 col-sm-6 col-xs-12">
-                                        <img src="docs/postgresql-colour-icon.png" alt="postgresql-logo">
-                                        <p> PostgresQL </p>
-                                    </div>
-                                    <div class="col-lg-3 col-sm-6 col-xs-12">
-                                        <img src="docs/mongodb-color-icon.png" alt="mongo-db-logo">
-                                        <p> Mongo </p>
-                                    </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        </div>
-    </div> -->
 
     <div class="skills">
         <div class="container text-center">
@@ -239,6 +161,9 @@
 
 
     <!-- projects -->
+    <div id="projects">
+    </div>
+
     <div class="section-divider">
         <hr class="hr-divider"/>
     </div>
@@ -246,6 +171,7 @@
     <div class="projects">
         <div class="container text-center">
             <h3> Projects </h3>
+            
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
