add more skills to tech stack

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Mystery Box Markets</h4>
                     <img src="docs/mysteryboxmarket.svg"/>
-                    <p class="techstack"> Ruby, Rails, HTML and CSS</p>
+                    <p class="techstack">Rails, HTML, CSS, AWS and Heroku</p>
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
                     </p>
