add profileicon to nav bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <img src="docs/hero-img.svg" alt="profileicon"/>
+        <a class="navbar-brand" href="#"><img src="docs/hero-img.png" class="navbar-img" alt="profileicon"/></a>
         <!-- <a class="navbar-brand" href="#">Navbar</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
