change navbar and jumbotron image to smaller pic

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
     <!-- navbar-->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#"><img src="docs/hero-img.png" class="navbar-img" alt="profileicon"/></a>
-        <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+        <a class="navbar-brand" href="#"><img src="docs/profile-pic.png" class="navbar-img" alt="profileicon"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -52,7 +51,7 @@
     <!-- hero image with about me -->
     <div class="hero jumbotron">
         <div class="hero-container">
-            <img src="docs/hero-img.svg"/>
+            <img src="docs/profile-pic.png"/>
             <p>Hi there! I'm Nathaniel.</p>
             <p>I'm a Full Stack Developer based in Sydney, Australia.</p>
             <p>Developing and designing web applications and seeing them come to life is my passion.</p>
