add <b> to landing page

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <div class="hero jumbotron">
         <div class="hero-container">
             <img src="docs/profile-pic.png"/>
-            <p>Hi there! I'm Nathaniel.</p>
-            <p>I'm a Full Stack Developer based in Sydney, Australia.</p>
+            <p>Hi there! <b>I'm Nathaniel.</b></p>
+            <p>I'm a <b>Full Stack Developer</b> based in Sydney, Australia.</p>
             <p>Developing and designing web applications and seeing them come to life is my passion.</p>
             <p>If I'm not working you can usually find me at the gym, exploring Azeroth or Tamriel.</p>
         </div>
@@ -214,6 +214,7 @@
     <!-- past experience -->
 
     <!-- contact me -->
+
 
     <!-- footer with social media -->
 
