--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
-                    <img src="docs/rubyTerminalProject.svg"/>
+                    <img src="docs/rubyTerminalProject.svg" class="project-images" />
+                    
                     <p class="techstack"> Ruby </p>
                     <p>
                         This terminal application was built using Ruby to be run inside the terminal. 
@@ -180,7 +181,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>CSS Zen Garden</h4>
-                    <img src="docs/css-zengarden.svg"/>
+                    <img src="docs/css-zengarden.svg" class="project-images"/>
                     <p class="techstack"> HTML and CSS </p>
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
@@ -189,14 +190,14 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Web Portfolio</h4>
-                    <img src="docs/webprofile-pic.svg"/>
+                    <img src="docs/webprofile-pic.svg" class="project-images"/>
                     <p class="techstack"> HTML, CSS and JavaScript </p>
                 </div>
             </div>
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Mystery Box Markets</h4>
-                    <img src="docs/mysteryboxmarket.svg"/>
+                    <img src="docs/mysteryboxmarket.svg" class="project-images" />
                     <p class="techstack">Rails, HTML, CSS, AWS and Heroku</p>
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
