add <a> to images opening github link to new tab; add smooth scroll feature to site

--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Ruby Terminal Project</h4>
-                    <img src="docs/rubyTerminalProject.svg" class="project-images" />
+                    <a href="https://github.com/moralesn1/terminalchoicesgame" target="_blank">
+                        <img src="docs/rubyTerminalProject.svg" class="project-images" />
+                    </a>
                     
                     <p class="techstack"> Ruby </p>
                     <p>
@@ -181,7 +183,10 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>CSS Zen Garden</h4>
-                    <img src="docs/css-zengarden.svg" class="project-images"/>
+                    <a href="https://github.com/moralesn1/CSS-Zen-Garden" target="_blank">
+                        <img src="docs/css-zengarden.svg" class="project-images"/>
+                    </a>
+
                     <p class="techstack"> HTML and CSS </p>
                     <p>
                         This project was aimed at developing my css skills as well as demonstrating
@@ -197,7 +202,10 @@
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Mystery Box Markets</h4>
-                    <img src="docs/mysteryboxmarket.svg" class="project-images" />
+                    <a href="https://github.com/Joshua-Tu/rails_team_project" target="_blank">
+                        <img src="docs/mysteryboxmarket.svg" class="project-images" />
+                    </a>
+
                     <p class="techstack">Rails, HTML, CSS, AWS and Heroku</p>
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
