add hr divider with slight difference above footer

--- a/index.html
+++ b/index.html
@@ -225,6 +225,10 @@
 
     <!-- Footer -->
 
+    <div class="section-divider">
+        <hr class="hr-divider footer"/>
+    </div>
+
     <footer class="page-footer">
 
         <!-- Copyright -->
