--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="nav-link" target="_blank" href="https://github.com/moralesn1/">
-                            <img src="docs/githubicon.png"/>
+                            <img src="docs/githubicon.png" alt="github icon"/>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://twitter.com/arraystartat0ne/">
-                            <img src="docs/twitterblack.png"/>
+                            <img src="docs/twitterblack.png" alt="twitter icon"/>
                         </a>
                     </li>
                 </ul>
@@ -51,7 +51,7 @@
     <!-- hero image with about me -->
     <div class="hero jumbotron">
         <div class="hero-container">
-            <img src="docs/profile-pic.png"/>
+            <img src="docs/profile-pic.png" alt="pixel art of me"/>
             <p>Hi there! <b>I'm Nathaniel.</b></p>
             <p>I'm a <b>Full Stack Developer</b> based in Sydney, Australia.</p>
             <p>Developing and designing web applications and seeing them come to life is my passion.</p>
