--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#portfolio">Portfolio</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Social Media
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="https://www.instagram.com/mr.nmorales/" target="_blank">Instagram</a>
+                      <a class="dropdown-item" href="https://medium.com/@nathanielmorales01" target="_blank">Medium</a>
+                    </div>
+                  </li>
             </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
