change twitter and github icon

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a class="nav-link" target="_blank" href="https://github.com/moralesn1/">
-                            <img src="docs/githubicon.png" alt="github icon"/>
+                            <img src="docs/icons8-github-filled.svg" alt="github icon"/>
                         </a>
                     </li>
                     <li>
                         <a class="nav-link" target="_blank" href="https://twitter.com/arraystartat0ne/">
-                            <img src="docs/twitterblack.png" alt="twitter icon"/>
+                            <img src="docs/icons8-twitter-small.svg" alt="twitter icon"/>
                         </a>
                     </li>
                 </ul>
