--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       Social Media
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="https://www.instagram.com/mr.nmorales/" target="_blank">Instagram</a>
+                      <a class="dropdown-item" href="https://www.instagram.com/mr.nmorales/" target="_blank">Instagram </a>
                       <a class="dropdown-item" href="https://medium.com/@nathanielmorales01" target="_blank">Medium</a>
                     </div>
                   </li>
@@ -243,7 +243,7 @@
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
             <p>
-                Nathaniel Morales © 2019
+                <b>Nathaniel Morales</b> © 2019
             </p>
         </div>
         <!-- Copyright -->
