add href to github repo for mysterybox markets, add href to website

--- a/index.html
+++ b/index.html
@@ -211,13 +211,18 @@
             <div class="row top-buffer">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                     <h4>Mystery Box Markets</h4>
-                    <a href="https://github.com/Joshua-Tu/rails_team_project" target="_blank">
+                    <a href="https://mystery-box-market.herokuapp.com/" target="_blank">
                         <img src="docs/mysteryboxmarket.svg" class="project-images" />
                     </a>
 
                     <p class="techstack">Rails, HTML, CSS, AWS and Heroku</p>
                     <p>
                         A two sided market place where users buy and sell "Mystery Boxes".
+                        <a href="https://github.com/Joshua-Tu/rails_team_project">
+                            <p>
+                                GitHub Repo
+                            </p>
+                        </a>
                     </p>
                 </div>
             </div>
@@ -243,7 +248,7 @@
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
             <p>
-                <b>Nathaniel Morales</b> © 2019
+                Nathaniel Morales © 2019
             </p>
         </div>
         <!-- Copyright -->
